# course_work_inverted_index

./: .gitignore  CMakeLists.txt  README.md  rsa_keygen.cpp
android_client/: settings.gradle
android_client/app/: build.gradle
android_client/app/src/androidTest/java/com/parallelcomp/socketconnection/: ExampleInstrumentedTest.java
android_client/app/src/main/: AndroidManifest.xml
android_client/app/src/main/java/com/parallelcomp/socketconnection/: MainActivity.java
android_client/app/src/main/res/layout/: activity_main.xml
android_client/app/src/main/res/values/: strings.xml
android_client/app/src/test/java/com/parallelcomp/socketconnection/: ExampleUnitTest.java
android_client/gradle/wrapper/: gradle-wrapper.properties
index/: Index.cpp  Index.h  IndexBuilder.cpp  IndexBuilder.h  SearchResult.h  TermPosition.h  TokenPosition.h  create_index.cpp  test_index.cpp
index_client/: IndexSearchClient.cpp  IndexSearchClient.h  client.cpp  main.cpp
index_server/: IndexSearchServer.cpp  IndexSearchServer.h  SocketListener.cpp  SocketListener.h  main.cpp  server.cpp
misc/: socked_data_exchange.h  socket_data_exchange.h  user_input.h
session/: AESEncryption.cpp  AESEncryption.h  ClientSession.cpp  ClientSession.h  ServerSession.cpp  ServerSession.h
src/index/: Index.cpp  Index.h  IndexBuilder.cpp  create_index.cpp
src/index_client/: IndexSearchClient.cpp  IndexSearchClient.h  main.cpp
src/index_server/: IndexSearchServer.cpp  IndexSearchServer.h  SocketListener.cpp  SocketListener.h  main.cpp
src/session/: AESEncryption.cpp  AESEncryption.h  ClientSession.cpp  ClientSession.h  DHKeyExchange.cpp  DHKeyExchange.h  EncryptedSession.cpp  EncryptedSession.h  EncryptedSocketConnection.cpp  EncryptedSocketConnection.h  Errors.cpp  Errors.h  RSAEncryption.cpp  RSAEncryption.h  RSAKeyPair.cpp  RSAKeyPair.h  SHA256Algorithm.cpp  SHA256Algorithm.h  ServerSession.cpp  ServerSession.h  index_serialization.h  ossl_parameter_utils.h  socket_data_exchange.h
test/: performance.cpp  test_index.cpp  test_session.cpp
